--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div>
-  <h1>
-    Welcome to {{ title }}
-  </h1>
-  <h2>Work in progress, watch this space.</h2>
+<div class="container-fluid pt-2">
+  <div class="row">
+    <div class="col-md-3 order-md-first order-sm-last">
+      <about-me></about-me>
+    </div>
+    <div class="col-md-9">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
-
-
-<router-outlet></router-outlet>
