--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,3 +1,4 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~font-awesome/css/font-awesome.css'; 
 
 /* You can add global styles to this file, and also import other style files */
