Added the blog component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav shad-orange-navbar">
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/" [routerLinkActiveOptions]="{ exact: true }">Home</a>
-        <a class="nav-item nav-link" routerLinkActive="active" href="#">Blog</a>
+        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/blog">Blog</a>
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/resume">Resume</a>
       </div>
     </div>
