--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="about-me-content">
     <h5>About me</h5>
-    <p>Hi, I'm Shad. I am a Kuala Lumpur based Software Developer. I primarily code within the .NET stack.</p>
+    <p>Hi, I'm Shad. I am a Kuala Lumpur-based Software Developer. I primarily code within the .NET stack.</p>
     <label for="emailLink">Contact: </label><a id="emailLink" href="mailto:arsh90@gmail.com">arsh90@gmail.com</a>
     <ul class="about-me-actionslist">
       <li><a class="btn btn-sm btn-link" routerLink="/resume">
