--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,10 +16,12 @@
   </nav>
 </header>
 
-<div class="container-fluid pt-2 bg-light">
+<div class="container-fluid bg-light">
   <div class="row">
     <div class="col-md-9">
-      <router-outlet></router-outlet>
+      <div class="main-content m-2">
+        <router-outlet></router-outlet>
+      </div>
     </div>
     <div class="col-md-3">
       <about-me></about-me>
