--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="about-me-panel bg-white">
+<div class="about-me-panel m-2 bg-white">
   <div class="about-me-imagebox">
     <img src="./assets/images/me.jpg" class="mx-auto" />
   </div>
