--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,7 +1,7 @@
 div.about-me-panel {
   box-shadow: 23ex; 
   font-size: 0.8rem;
-  border-left: 1px solid lightgray; 
+  border: 1px solid lightgray; 
   padding: 1rem; 
 }
     
