ui changes white body

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,15 +16,15 @@
   </nav>
 </header>
 
-<div class="container-fluid bg-light">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-md-9">
+    <div class="col-md-10">
       <div class="main-content m-2">
         <router-outlet></router-outlet>
       </div>
     </div>
-    <div class="col-md-3">
-      <about-me></about-me>
+    <div class="col-md-2">
+        <about-me></about-me>
     </div>
   </div>
 </div>
