Adjusted about me layout

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,6 +1,6 @@
-<div class="about-me-panel m-2 bg-light">
+<div class="about-me-panel bg-light">
   <div class="about-me-imagebox">
-    <img src="./assets/images/me.jpg" class="mx-auto" />
+    <img src="./assets/images/me.jpg" class="img-fluid" />
   </div>
   <div class="about-me-content">
     <h5>About me</h5>
