--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -1,6 +1,6 @@
 div.about-me-panel {
   font-size: 0.8rem;
-  padding: 1rem; 
+  padding: 1rem 0; 
 }
     
 div.about-me-panel div.about-me-imagebox {
