--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,12 +18,12 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-10">
+    <div class="col-md-8 col-lg-10">
       <div class="main-content m-2">
         <router-outlet></router-outlet>
       </div>
     </div>
-    <div class="col-md-2">
+    <div class="col-md-4 col-lg-2">
         <about-me></about-me>
     </div>
   </div>
