resume page mock

--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -1,3 +1,70 @@
-<p>
-  resume works!
-</p>
+<h1>Resume</h1>
+<div class="bg-white p-2">
+  <div>Contents</div>
+  <ol>
+    <li *ngFor="let content of contents"><button class="btn btn-sm btn-link" (click)="scrollIntoView(content.elementId)">{{content.displayText}}</button></li>
+  </ol>
+  
+  <h2 id="h2Introduction">Introduction</h2>
+  <p>The term came into use around 1970, when the Four Asian Tigers[4] of Hong Kong, Singapore, South Korea, and Taiwan
+    rose to global prominence as NICs in the 1970s and 1980s, with exceptionally fast industrial growth since the 1960s;
+    all four economies have since graduated into advanced economies and high-income economies. There is a clear
+    distinction between these countries and the countries now considered NICs. In particular, the combination of an open
+    political process, high GNI per capita, and a thriving, export-oriented economic policy has shown that these countries
+    have now not only reached but surpassed the ranks of many developed countries.
+  
+    All four economies are classified as high-income economies by the World Bank and Advanced economies by the
+    International Monetary Fund (IMF) and U.S. Central Intelligence Agency (CIA). All of them, like Western European
+    countries, have a Human Development Index considered "very high" by the UN.</p>
+  
+  <h2 id="h2Skills"> Technical Skills</h2>
+  <p>NICs are countries whose economies have not yet reached a developed country's status but have, in a macroeconomic
+    sense, outpaced their developing counterparts. Such countries are still considered developing nations and only differ
+    from other developing nations in the rate at which an NIC's growth is much higher over a shorter allotted time period
+    compared to other developing nations.[1][2] Another characterization of NICs is that of countries undergoing rapid
+    economic growth (usually export-oriented). Incipient or ongoing industrialization is an important indicator of an NIC.
+    In many NICs, social upheaval can occur as primarily rural, or agricultural, populations migrate to the cities, where
+    the growth of manufacturing concerns and factories can draw many thousands of laborers. NIC's introduce many new
+    immigrants looking to improve their social and or political status thorough newly formed democracy's and increase in
+    wages that most individuals who partake in such changes would obtain.[3]</p>
+  
+  <h2 id="h2Employment">Employment History</h2>
+  <p>NICs usually benefit from comparatively low wage costs, which translates into lower input prices for suppliers. As a
+    result, it is often easier for producers in NICs to outperform and outproduce factories in developed countries, where
+    the cost of living is higher, and trade unions and other organizations have more political sway. This comparative
+    advantage is often criticized by advocates of the fair trade movement.
+  
+    Critics of NICs argue economic freedom is not always associated with political freedom in countries such as China,
+    pointing out that Internet censorship and human rights violations are common.[22] The case is diametrically opposite
+    for India; While being a liberal democracy throughout after its independence[citation needed], India has been widely
+    criticized for its inefficient, bureaucratic governance and slow process of structural reform. Thus, while political
+    freedom in China remains limited, the average Chinese citizen enjoys a higher standard of living than his or her
+    counterpart in India.[23]</p>
+  
+  <h2 id="h2Education">Education and Certifications</h2>
+  <p>The idea of categorizing countries by their economic and developmental status began during the Cold War with the
+    classifications of East and West. The Soviet Union and China represented the East, and the United States and their
+    allies represented the West. The term 'Third World' came into parlance in the second half of the twentieth century. It
+    originated in a 1952 article by Alfred Sauvy entitled "Trois Mondes, Une Planète."[4] Early definitions of the Third
+    World emphasized its exclusion from the East-West conflict of the Cold War as well as the ex-colonial status and
+    poverty of the nations it comprised.[4] Efforts to mobilize the Third World as an autonomous political entity were
+    undertaken. The 1955 Bandung Conference was an early meeting of Third World states in which an alternative to
+    alignment with either the Eastern or Western Blocs was promoted.[4] Following this, the first Non-Aligned Summit was
+    organized in 1961. Contemporaneously, a mode of economic criticism which separated the world economy into "core" and
+    "periphery" was developed and given expression in a project for political reform which "moved the terms 'North' and
+    'South' into the international political lexicon."[5] In 1973, the pursuit of a New International Economic Order which
+    was to be negotiated between the North and South was initiated at the Non-Aligned Summit held in Algiers.[6] Also in
+    1973, the oil embargo initiated by Arab OPEC countries as a result of the Yom Kippur War caused an increase in world
+    oil prices, with prices continuing to rise throughout the decade.[7] This contributed to a worldwide recession which
+    resulted in industrialized nations increasing economically protectionist policies and contributing less aid to the
+    less developed countries of the South.[7] The slack was taken up by Western banks, which provided substantial loans to
+    Third World countries.[8] However, many of these countries were not able to pay back their debt, which led the IMF to
+    extend further loans to them on the condition that they undertake certain liberalizing reforms.[8] This policy, which
+    came to be known as structural adjustment, and was institutionalized by International Financial Institutions (IFIs)
+    and Western governments, represented a break from the Keynesian approach to foreign aid which had been the norm from
+    the end of the Second World War.[8] After 1987, reports on the negative social impacts that structural adjustment
+    policies had had on affected developing nations led IFIs to supplement structural adjustment policies with targeted
+    anti-poverty projects.[9] Following the end of the Cold War and the break-up of the Soviet Union, some Second World
+    countries joined the First World, and others joined the Third World. A new and simpler classification was needed. Use
+    of the terms "North" and "South" became more widespread.</p>
+</div>
