--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,14 @@
     <a class="navbar-brand" href="#">
       <img src="./assets/images/logo.png" class="d-inline-block align-top" />
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav shad-orange-navbar">
-        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/" [routerLinkActiveOptions]="{ exact: true }">Home</a>
+        <a class="nav-item nav-link" routerLinkActive="active" routerLink="/"
+          [routerLinkActiveOptions]="{ exact: true }">Home</a>
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/blog">Blog</a>
         <a class="nav-item nav-link" routerLinkActive="active" routerLink="/resume">Resume</a>
       </div>
@@ -24,7 +26,7 @@
       </div>
     </div>
     <div class="col-md-2">
-        <about-me></about-me>
+      <about-me></about-me>
     </div>
   </div>
 </div>
