--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,8 +1,8 @@
-<div class="about-me-panel bg-light">
+<div class="about-me-panel">
   <div class="about-me-imagebox">
     <img src="./assets/images/me.jpg" class="img-fluid" />
   </div>
-  <div class="about-me-content">
+  <div class="about-me-content pt-2">
     <h5>About me</h5>
     <p>Hi, I'm Shad. I am a Kuala Lumpur-based Software Developer. I primarily code within the .NET stack.</p>
     <label for="emailLink">Contact: </label><a id="emailLink" href="mailto:arsh90@gmail.com">arsh90@gmail.com</a>
