--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 $body-bg: #ebeff2;
 $body-color: #111;
+$font-size-base: 0.9rem; 
 
 @import 'node_modules/bootstrap/scss/bootstrap';
 @import '~font-awesome/css/font-awesome.css'; 
