--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -39,8 +39,8 @@
 
   <h2 id="h2Skills"> Technical Skills</h2>
   <div>
-    <table class="table table-striped">
-      <caption>⭐ skills acquired through project experience of 5 years or greater
+    <table class="table table-striped table-responsive-sm">
+      <caption id="techSkillsTableCaption">⭐ skills acquired through project experience of 5 years or greater
       </caption>
       <tr *ngFor="let skillCategory of technicalSkillCategories">
         <td class="w-25">{{skillCategory.name}}</td>
@@ -57,19 +57,22 @@
   </div>
 
   <h2 id="h2Employment">Employment History</h2>
-  <table class="table">
+  <table class="table table-responsive-sm">
     <thead>
       <tr>
         <th>Company Name</th>
         <th>Position Held</th>
         <th>From</th>
         <th>To</th>
-        <th>Total Year</th>
+        <th>Total Year(s)</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let employmentHistory of employmentHistories">
-        <td><a [href]="employmentHistory.companyUrl">{{employmentHistory.companyName}}</a></td>
+        <td>
+          <a [href]="employmentHistory.companyUrl">{{employmentHistory.companyName}}</a>
+          <sup *ngFor="let asterisk of employmentHistory.companySubcripts"> {{asterisk}}</sup>
+        </td>
         <td>{{employmentHistory.position}}</td>
         <td>{{employmentHistory.fromDate | date:'MMM y'}}</td>
         <td>
@@ -83,15 +86,13 @@
     </tbody>
     <tfoot>
       <tr>
-        <td colspan="3"></td>
-        <td><strong class="pull-right">Total Years Exp: </strong></td>
+        <td colspan="4"><strong class="pull-right">Total Years Exp: </strong></td>
         <td>
           <span>{{ calculateTotalYearsExp() }}</span>
         </td>
       </tr>
     </tfoot>
   </table>
-
 
   <h2 id="h2Education">Certifications & Education</h2>
   <hr />
