--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark mb-2">
     <a class="navbar-brand" href="#">
       <img src="./assets/images/logo.png" class="d-inline-block align-top" />
     </a>
@@ -21,7 +21,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-8 col-lg-10">
-      <div class="main-content m-2">
+      <div class="main-content">
         <router-outlet></router-outlet>
       </div>
     </div>
