--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,12 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-8 col-lg-10">
+    <div class="col">
+      <h1>Resume</h1>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8 col-lg-10 mb-3 mb-sm-0">
       <div class="main-content">
         <router-outlet></router-outlet>
       </div>
