--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -1,7 +1,4 @@
-<div class="d-flex">
-  <h1 class="mr-auto">Resume</h1>
-  <button class="btn m-2" (click)="print()"><i class="fa fa-print"></i> Print this resume</button>
-</div>
+<!-- <button class="btn m-2 d-none d-md-block" (click)="print()"><i class="fa fa-print"></i> Print this resume</button> -->
 <div class="bg-white p-2">
   <div class="row">
     <div class="col">
