--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-      <h1>Resume</h1>
+      <h5>> Resume</h5>
     </div>
   </div>
   <div class="row">
