--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col">
-      <h5>> work in progress</h5>
+      <app-content-header></app-content-header>
     </div>
   </div>
   <div class="row">
