--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -61,7 +61,7 @@
         <th>Position Held</th>
         <th>From</th>
         <th>To</th>
-        <th>Total Year(s)</th>
+        <th>Year(s) in Company</th>
       </tr>
     </thead>
     <tbody>
