--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -15,21 +15,8 @@
     </div>
     <div class="col-md-8">
       <h2 id="h2Introduction">Introduction</h2>
-      <p>The term came into use around 1970, when the Four Asian Tigers[4] of Hong Kong, Singapore, South Korea, and
-        Taiwan
-        rose to global prominence as NICs in the 1970s and 1980s, with exceptionally fast industrial growth since the
-        1960s;
-        all four economies have since graduated into advanced economies and high-income economies. There is a clear
-        distinction between these countries and the countries now considered NICs. In particular, the combination of an
-        open
-        political process, high GNI per capita, and a thriving, export-oriented economic policy has shown that these
-        countries
-        have now not only reached but surpassed the ranks of many developed countries.
-
-        All four economies are classified as high-income economies by the World Bank and Advanced economies by the
-        International Monetary Fund (IMF) and U.S. Central Intelligence Agency (CIA). All of them, like Western European
-        countries, have a Human Development Index considered "very high" by the UN.</p>
-
+      <p>Hi, I'm Shad. And welcome to my online resume. This page was created to provide you the ability to navigate my details with ease. A printed and PDF version is also available. This resume and site itself is intended as a POC of my skills in designing and developing a navigatable and intuitive user application. I believe all software (internal or external) should be created with the user first-in-mind, providing sufficient navigation, and should be designed with complexities that requires training as little as possible.</p>
+      <p>Feedbacks and comments are very welcome. Get in touch. </p>
     </div>
   </div>
 
