--- a/src/app/components/resume/resume.component.html
+++ b/src/app/components/resume/resume.component.html
@@ -3,8 +3,7 @@
   <div class="row">
     <div class="col">
       <ol class="contents-list" id="olContentsList">
-        <li *ngFor="let content of contents"><a href="javascript:void(0)"
-            (click)="scrollIntoView(content.elementId)">
+        <li *ngFor="let content of contents"><a href="javascript:void(0)" (click)="scrollIntoView(content.elementId)">
             <span>{{content.displayText}}</span>
           </a>
           <ol *ngIf="content.children">
@@ -17,16 +16,20 @@
     </div>
     <div class="col-md-8">
       <h2 id="h2Introduction">Introduction</h2>
-      <p>Hi, I'm Shad. And welcome to my online resume. This page was created to provide you the ability to navigate my details with ease. A printed and PDF version is also available. This resume and site itself is intended as a POC of my skills in designing and developing a navigatable and intuitive user application. I believe all software (internal or external) should be created with the user first-in-mind, providing sufficient navigation, and should be designed with complexities that requires training as little as possible.</p>
+      <p>Hi, I'm Shad. And welcome to my online resume. This page was created to provide you the ability to navigate my
+        details with ease. A printed and PDF version is also available. This resume and site itself is intended as a POC
+        of my skills in designing and developing a navigatable and intuitive user application. I believe all software
+        (internal or external) should be created with the user first-in-mind, providing sufficient navigation, and
+        should be designed with complexities that requires training as little as possible.</p>
       <p>Feedbacks and comments are very welcome. Get in touch. </p>
-      <!-- <button class="btn btn-sm btn-primary hidden-sm-up" (click)="scrollIntoView('olContentsList')"><i class="fa fa-arrow-up"></i> Back to top</button> -->
     </div>
   </div>
 
   <h2 id="h2Skills"> Technical Skills</h2>
   <div>
     <table class="table table-striped table-responsive-sm">
-      <caption id="techSkillsTableCaption"><i class="fa fa-fw fa-star star-orange"></i> skills acquired through project experience of 5 years or greater
+      <caption id="techSkillsTableCaption"><i class="fa fa-fw fa-star star-orange"></i> skills acquired through project
+        experience of 5 years or greater
       </caption>
       <tr *ngFor="let skillCategory of technicalSkillCategories">
         <td class="w-25">{{skillCategory.name}}</td>
@@ -80,6 +83,17 @@
     </tfoot>
   </table>
 
+  <h2 id="h2KeyProject">Key Project Achievements</h2>
+  <hr/> 
+  <div *ngFor="let keyProj of keyProjectAchievements">
+    <h4 [id]="keyProj.htmlElementId">{{keyProj.title}}</h4>
+    <span class="text-muted">{{keyProj.fromDate | date:'MMM y'}} - {{ keyProj.fromDate | date:'MMM y' }} ({{ calculateEmploymentDuration(keyProj.fromDate, keyProj.toDate) }})</span>
+    <p>{{keyProj.description}}</p>
+    <ul>
+      <li *ngFor="let responsb of keyProj.jobResponsibilities">{{responsb}}</li>
+    </ul>
+  </div>
+
   <h2 id="h2Education">Certifications & Education</h2>
   <hr />
   <h4>Certifications</h4>
@@ -108,3 +122,5 @@
     </li>
   </ul>
 </div>
+
+<button class="btn btn-sm btn-primary d-block d-sm-none btn-back-to-top" (click)="scrollIntoView('olContentsList')"><i class="fa fa-arrow-up"></i> To Top</button>
