Moved $shad-orange to variables.scss

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,5 @@
+@import "./../variables.scss";
 
 .navbar-nav.shad-orange-navbar .nav-item:hover {
-    color:#e5dd5c; 
+    color:$shad-orange; 
 }
